--- a/PhotoCollection/PhotoCollection/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotoCollection/PhotoCollection/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,212 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vam-QC-Et0">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Photos Collection View Controller-->
+        <scene sceneID="kkj-Me-6xz">
+            <objects>
+                <collectionViewController id="MKC-fw-pF4" customClass="PhotosCollectionViewController" customModule="PhotoCollection" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="gZb-k6-sdG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ey5-4v-8DZ">
+                            <size key="itemSize" width="155" height="154"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="3td-7g-h57" customClass="PhotosCollectionViewCell" customModule="PhotoCollection" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sTZ-G9-AdM">
+                                    <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aqY-DY-1Ll">
+                                            <rect key="frame" x="10" y="10" width="150" height="126.5"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0El-zk-NOB">
+                                            <rect key="frame" x="20" y="141.5" width="130" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="aqY-DY-1Ll" firstAttribute="leading" secondItem="sTZ-G9-AdM" secondAttribute="leading" constant="10" id="1QW-Bg-9IV"/>
+                                        <constraint firstItem="0El-zk-NOB" firstAttribute="leading" secondItem="sTZ-G9-AdM" secondAttribute="leading" constant="20" id="3C5-8g-FCA"/>
+                                        <constraint firstAttribute="trailing" secondItem="aqY-DY-1Ll" secondAttribute="trailing" constant="10" id="9Sw-bl-zmv"/>
+                                        <constraint firstAttribute="bottom" secondItem="0El-zk-NOB" secondAttribute="bottom" constant="8" id="GoX-Eu-Sa5"/>
+                                        <constraint firstItem="0El-zk-NOB" firstAttribute="top" secondItem="aqY-DY-1Ll" secondAttribute="bottom" constant="5" id="J6G-8m-b2L"/>
+                                        <constraint firstItem="aqY-DY-1Ll" firstAttribute="top" secondItem="sTZ-G9-AdM" secondAttribute="top" constant="10" id="T0n-8w-QQ0"/>
+                                        <constraint firstAttribute="trailing" secondItem="0El-zk-NOB" secondAttribute="trailing" constant="20" id="jFh-SF-i3W"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="170" height="170"/>
+                                <connections>
+                                    <outlet property="photoImageView" destination="aqY-DY-1Ll" id="p39-3P-Wjq"/>
+                                    <outlet property="photoTitleLabel" destination="0El-zk-NOB" id="qjF-2p-mTI"/>
+                                    <segue destination="9J0-vM-eFw" kind="show" identifier="showPhotoDetailSegue" id="EMW-iO-zlT"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="MKC-fw-pF4" id="P8C-Dl-sIR"/>
+                            <outlet property="delegate" destination="MKC-fw-pF4" id="5jt-s4-tNI"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="12G-wv-mix">
+                        <barButtonItem key="leftBarButtonItem" title="Select Theme" id="h2B-I1-PA8">
+                            <connections>
+                                <segue destination="uv1-eI-0Ir" kind="presentation" identifier="SelectThemeSegue" id="eDQ-X1-kzd"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3MF-Pd-fgr">
+                            <connections>
+                                <segue destination="9J0-vM-eFw" kind="show" identifier="addPhotoSegue" id="p4s-ez-ZiW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FHc-QA-8Ac" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="900.00000000000011" y="-39.508928571428569"/>
+        </scene>
+        <!--Theme Selection View Controller-->
+        <scene sceneID="z9V-YD-PM2">
+            <objects>
+                <viewController id="uv1-eI-0Ir" customClass="ThemeSelectionViewController" customModule="PhotoCollection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cib-dY-9TX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a theme" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ukb-B5-Pg8">
+                                <rect key="frame" x="20" y="318.5" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="V9W-tU-a3k">
+                                <rect key="frame" x="140" y="389" width="134" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53q-UU-iOx">
+                                        <rect key="frame" x="0.0" y="0.0" width="33" height="30"/>
+                                        <state key="normal" title="Dark"/>
+                                        <connections>
+                                            <action selector="selectDarkTheme:" destination="uv1-eI-0Ir" eventType="touchUpInside" id="W7H-rX-SCP"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TjX-QL-V6H">
+                                        <rect key="frame" x="103" y="0.0" width="31" height="30"/>
+                                        <state key="normal" title="Blue"/>
+                                        <connections>
+                                            <action selector="setThemePreferenceToBlue:" destination="uv1-eI-0Ir" eventType="touchUpInside" id="fob-bN-gXt"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="9gU-kO-iR5" firstAttribute="trailing" secondItem="ukb-B5-Pg8" secondAttribute="trailing" constant="20" id="NgQ-jw-Q0k"/>
+                            <constraint firstItem="V9W-tU-a3k" firstAttribute="top" secondItem="ukb-B5-Pg8" secondAttribute="bottom" constant="50" id="fAx-kL-jcU"/>
+                            <constraint firstItem="V9W-tU-a3k" firstAttribute="centerY" secondItem="9gU-kO-iR5" secondAttribute="centerY" id="rCe-wW-Dsd"/>
+                            <constraint firstItem="V9W-tU-a3k" firstAttribute="centerX" secondItem="9gU-kO-iR5" secondAttribute="centerX" id="veq-rX-d2P"/>
+                            <constraint firstItem="ukb-B5-Pg8" firstAttribute="leading" secondItem="9gU-kO-iR5" secondAttribute="leading" constant="20" id="wlA-zh-Dxj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9gU-kO-iR5"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Cj3-2g-GRC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8UU-7a-28I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1772" y="-298"/>
+        </scene>
+        <!--Photo Detail View Controller-->
+        <scene sceneID="vVZ-g2-qbd">
+            <objects>
+                <viewController id="9J0-vM-eFw" customClass="PhotoDetailViewController" customModule="PhotoCollection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fbC-jV-QsP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1cV-Lc-ljj">
+                                <rect key="frame" x="87" y="223" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="t6E-ja-ggF"/>
+                                    <constraint firstAttribute="width" constant="240" id="ykV-Fr-q79"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2zp-5Z-L0c">
+                                <rect key="frame" x="20" y="421" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1T7-IZ-HrN">
+                                <rect key="frame" x="171" y="371" width="72" height="30"/>
+                                <state key="normal" title="Add Photo"/>
+                                <connections>
+                                    <action selector="addPhoto:" destination="9J0-vM-eFw" eventType="touchUpInside" id="xqG-Bb-VB6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="1cV-Lc-ljj" firstAttribute="centerX" secondItem="1T7-IZ-HrN" secondAttribute="centerX" id="55f-jS-ddD"/>
+                            <constraint firstItem="1T7-IZ-HrN" firstAttribute="top" secondItem="1cV-Lc-ljj" secondAttribute="bottom" constant="20" id="7ig-z4-X3p"/>
+                            <constraint firstItem="1cV-Lc-ljj" firstAttribute="top" secondItem="Clh-66-zkP" secondAttribute="top" constant="135" id="BfK-DQ-btx"/>
+                            <constraint firstItem="2zp-5Z-L0c" firstAttribute="top" secondItem="1T7-IZ-HrN" secondAttribute="bottom" constant="20" id="M8x-X6-KlV"/>
+                            <constraint firstItem="1T7-IZ-HrN" firstAttribute="top" secondItem="1cV-Lc-ljj" secondAttribute="bottom" constant="20" id="Xe5-fE-ckb"/>
+                            <constraint firstItem="1cV-Lc-ljj" firstAttribute="centerX" secondItem="2zp-5Z-L0c" secondAttribute="centerX" id="cEf-tR-KB5"/>
+                            <constraint firstItem="2zp-5Z-L0c" firstAttribute="leading" secondItem="Clh-66-zkP" secondAttribute="leading" constant="20" id="dDQ-Al-xhC"/>
+                            <constraint firstItem="Clh-66-zkP" firstAttribute="trailing" secondItem="2zp-5Z-L0c" secondAttribute="trailing" constant="20" id="wVw-MP-fiW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Clh-66-zkP"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="0O2-OE-L8c">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="0MQ-8N-ik4">
+                            <connections>
+                                <action selector="savePhoto:" destination="9J0-vM-eFw" id="rHK-21-bkO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageTitleTextField" destination="2zp-5Z-L0c" id="bvR-FH-v8X"/>
+                        <outlet property="imageView" destination="1cV-Lc-ljj" id="XBB-Ui-j3Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Krs-xE-TEY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1938" y="354"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JhS-PK-PM9">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vam-QC-Et0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bMx-ZJ-c2P">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="MKC-fw-pF4" kind="relationship" relationship="rootViewController" id="Uc1-6U-EtB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cmM-zz-USY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-10.144927536231885" y="-39.508928571428569"/>
+        </scene>
+    </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="p4s-ez-ZiW"/>
+    </inferredMetricsTieBreakers>
 </document>
