--- a/PhotoCollection/PhotoCollection/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotoCollection/PhotoCollection/Storyboards/Base.lproj/Main.storyboard
@@ -32,6 +32,10 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aqY-DY-1Ll">
                                             <rect key="frame" x="10" y="10" width="150" height="126.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="150" id="6er-3x-n6G"/>
+                                                <constraint firstAttribute="height" constant="126.5" id="MB2-2j-s6u"/>
+                                            </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0El-zk-NOB">
                                             <rect key="frame" x="20" y="141.5" width="130" height="20.5"/>
@@ -54,7 +58,7 @@
                                 <connections>
                                     <outlet property="photoImageView" destination="aqY-DY-1Ll" id="p39-3P-Wjq"/>
                                     <outlet property="photoTitleLabel" destination="0El-zk-NOB" id="qjF-2p-mTI"/>
-                                    <segue destination="9J0-vM-eFw" kind="show" identifier="showPhotoDetailSegue" id="EMW-iO-zlT"/>
+                                    <segue destination="9J0-vM-eFw" kind="show" identifier="ShowPhotoDetailSegue" id="EMW-iO-zlT"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -66,12 +70,12 @@
                     <navigationItem key="navigationItem" id="12G-wv-mix">
                         <barButtonItem key="leftBarButtonItem" title="Select Theme" id="h2B-I1-PA8">
                             <connections>
-                                <segue destination="uv1-eI-0Ir" kind="presentation" identifier="SelectThemeSegue" id="eDQ-X1-kzd"/>
+                                <segue destination="uv1-eI-0Ir" kind="presentation" identifier="SelectThemeSegue" modalPresentationStyle="fullScreen" id="eDQ-X1-kzd"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3MF-Pd-fgr">
                             <connections>
-                                <segue destination="9J0-vM-eFw" kind="show" identifier="addPhotoSegue" id="p4s-ez-ZiW"/>
+                                <segue destination="9J0-vM-eFw" kind="show" identifier="AddPhotoSegue" id="p4s-ez-ZiW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -85,17 +89,17 @@
             <objects>
                 <viewController id="uv1-eI-0Ir" customClass="ThemeSelectionViewController" customModule="PhotoCollection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cib-dY-9TX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a theme" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ukb-B5-Pg8">
-                                <rect key="frame" x="20" y="318.5" width="374" height="20.5"/>
+                                <rect key="frame" x="20" y="367.5" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="V9W-tU-a3k">
-                                <rect key="frame" x="140" y="389" width="134" height="30"/>
+                                <rect key="frame" x="140" y="438" width="134" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53q-UU-iOx">
                                         <rect key="frame" x="0.0" y="0.0" width="33" height="30"/>
